# rust-ts3plugin

./: Cargo.toml
src/: build.rs  lib.rs  plugin.rs  ts3interface.rs
