[package]
name = "ts3plugin"
version = "0.3.1"
authors = ["Flakebi <flakebi@t-online.de>"]
description = """
An abstraction layer that simplifies creating TeamSpeak3 plugins
and stores received data to provide a more convenient API.
"""
repository = "https://github.com/Flakebi/rust-ts3plugin"
documentation = "https://docs.rs/ts3plugin"
readme = "README.md"
keywords = ["plugin", "TeamSpeak3", "TS3"]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"
build = "src/build.rs"

[badges]
travis-ci = { repository = "Flakebi/rust-ts3plugin" }

[lib]
name = "ts3plugin"

[features]
default = []

[dependencies]
chrono = "0.4"
ts3plugin-sys = "0.3"
lazy_static = "1.4"

# For tests
[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
